syntax = "proto3";
package test_config;

message SubField {
  bool enabled = 1;
}

enum EnumField {
  TYPE1 = 0;
  TYPE2 = 1;
}

message Config {
  bool enabled = 1;
  int32 field_i32 = 2;
  uint32 field_u32 = 3;
  int64 field_i64 = 4;
  uint64 field_u64 = 5;
  double field_double = 6;
  float field_float = 7;
  string field_string = 8;
  SubField field_message = 9;
  repeated uint64 field_repeated = 10;
  EnumField field_enum = 11;
  repeated EnumField field_repeated_enum = 12;
}
